<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <ImageView
        android:id="@+id/rover_photo_iv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/earth_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rover_photo_iv"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:hint="@string/earth_date_hint"
        android:textColor="@color/text"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rover_photo_iv" />

    <TextView
        android:id="@+id/mars_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rover_photo_iv"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@+id/earth_time_tv"
        android:hint="@string/mars_date_hint"
        android:textColor="@color/text"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/earth_time_tv"
        app:layout_constraintTop_toBottomOf="@+id/rover_photo_iv" />

    <TextView
        android:id="@+id/camera_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/earth_time_tv"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/camera_name_hint"
        android:textColor="@color/text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/earth_time_tv" />

    <TextView
        android:id="@+id/photo_url_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mars_time_tv"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@+id/camera_name_tv"
        android:hint="@string/photo_url_hint"
        android:textColor="@color/primary_01"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/camera_name_tv"
        app:layout_constraintTop_toBottomOf="@+id/mars_time_tv" />


</androidx.constraintlayout.widget.ConstraintLayout>
